feat:Document preview generation UI
